# Scientific-Calculator

my_app/: pubspec.yaml
my_app/android/app/: build.gradle.kts
my_app/android/app/src/main/cpp/: CMakeLists.txt  calc_engine.cpp  calculator.cpp
my_app/ios/Runner/: Info.plist
my_app/lib/: main.dart
my_app/lib/constants/: calc_colors.dart  colors.dart
my_app/lib/data/: keypad_layout.dart
my_app/lib/models/: calc_key.dart  calculation.dart
my_app/lib/screens/: calculator_screen.dart  settings_screen.dart
my_app/lib/services/: ai_api_service.dart  calculator_service.dart  calculator_state.dart  global_state.dart
my_app/lib/services/scanner/: scanner_service.dart
my_app/lib/widgets/: calc_button.dart
my_app/src/: calculator.cpp
my_app/test/: calculator_service_test.dart  calculator_state_test.dart  test_char.dart  ui_test.dart  widget_test.dart  x_n_test.dart
